client/src/features/projects/ProjectsStylesheet.scss
@import '../../stylesheets/colorPalette.scss';

.projectSection {
  background-color: $main-dark;
  height: 85vh;
  width: 100%;
  display: flex;
  align-items: center;
  justify-content: center;
}

.projectContainer {
  width: 100%;
  height: 100%;
}

.triangleRow {
  height: 25%;
  background-color: $main-dark;
}

.triangleRowTop {
  height: 18%;
}

.triangleHolder {
  height: 100%;
  display: flex;
  align-items: start;
}

.triangle {
  height: 100%;
  width: 100%;
  background: linear-gradient(to right bottom, $main-light 50%, transparent 50%);
}

.bottomTriangle {
  background: linear-gradient(to bottom right, transparent 50%, $main-light 50%);
  background-color: $main-dark;
}

.projectsHeaderContainer {
  font-size: 3em;
  color: $font-light;
  padding: 1em;
}

.contentRow {
  height: 65%;
  overflow: visible;
}

.cardHolder {
  height: 75%;
  width: 33%;
  padding: .4%;
}

.card {
  background-color: black;
  width: 100%;
  height: 100%;
}

.contentHolder {
  overflow: scroll;
  display: flex;
  flex-wrap: wrap;
}

